# ai-coding-agent_linh

./: Build AI Coding Agent.md  README.md  pyproject.toml
config/: default.yaml
config/workflows/: code_review.yaml  implement_refine.yaml  iterative_refine.yaml  test_api.yaml  test_login.yaml
docs/: IMPLEMENTATION_PLAN.md  TASK_CHECKLIST.md  WALKTHROUGH.md
src/ai_coding_agent/: __init__.py
src/ai_coding_agent/agent/: __init__.py  core.py  session.py
src/ai_coding_agent/cli/: __init__.py  main.py  workflow_cli.py
src/ai_coding_agent/config/: __init__.py
src/ai_coding_agent/orchestrator/: __init__.py  async_executor.py  workflow.py
src/ai_coding_agent/providers/: __init__.py  base.py  claude.py  codex.py  gemini.py
src/ai_coding_agent/testing/: __init__.py  assertions.py  browser.py  browser_tool.py  network_inspector.py  workflow_runner.py
src/ai_coding_agent/tools/: __init__.py  edit.py  exec.py  file.py  registry.py  search.py
